feat: contact page
Squashed commit of the following:

commit 908a2794f55e4f65d12a775bb0ac5f50784a7953
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:13:17 2020 +0200

    chore: update CHANGELOG

commit 202fbf6295ef06803465e1b4d2919740f90c4c35
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:10:14 2020 +0200

    feat: don't open analyzer by default

commit 4831fa352f2cadef30a07d8e124c65c689d357e4
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:06:27 2020 +0200

    feat: add field requirement label

commit ee8fc1a51b7e915f0b156eeda6867be8fdf2a278
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:49:56 2020 +0200

    feat: add contact page to navigation

commit bac6f2992d0f9c0dfdd9fea42efa87ed75f936cb
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:43:12 2020 +0200

    feat: add contact request status indicator

commit 91a9b5065bbdd6591c02ef2aef67666ee294e0ca
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:16:23 2020 +0200

    feat: add contact form

commit 53c33a783f046cc037fb1a323e03a811c0299439
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 22:54:01 2020 +0200

    fix: webpack-dev-server history api fallback

commit 26c76bb2f001236cc33ebfcf2f5f22f3627c510e
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 20:58:11 2020 +0200

    feat: add contact page

commit c1d32a99d346beb8ae0932719e3a5010e1b1f688
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 20:50:32 2020 +0200

    chore: ignore .vercel

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "homepage": "https://github.com/dstrekelj/react-portfolio-example#readme",
     "devDependencies": {
         "@babel/core": "^7.10.3",
+        "@babel/plugin-transform-runtime": "^7.10.4",
         "@babel/preset-env": "^7.10.3",
         "@babel/preset-react": "^7.10.1",
         "@types/prop-types": "^15.7.3",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
+        "@types/yup": "^0.29.3",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.6.0",
@@ -51,10 +53,14 @@
     },
     "dependencies": {
         "classnames": "^2.2.6",
+        "final-form": "^4.20.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0"
+        "react-final-form": "^6.5.0",
+        "react-router-dom": "^5.2.0",
+        "react-spring": "^8.0.27",
+        "yup": "^0.29.1"
     },
     "husky": {
         "hooks": {
