--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.6.0",
+        "dotenv-webpack": "^2.0.0",
         "eslint": "^7.3.1",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
@@ -58,6 +59,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-final-form": "^6.5.0",
+        "react-query": "^2.4.15",
         "react-router-dom": "^5.2.0",
         "react-spring": "^8.0.27",
         "yup": "^0.29.1"
