--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
     "name": "server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
-        "dev": "node-dev src/index.js"
+        "build": "netlify-lambda build src",
+        "dev": "node-dev index.js"
     },
     "keywords": [],
     "author": "dstrekelj <domagojstrekelj@gmail.com>",
@@ -15,14 +16,17 @@
         "@types/multer": "^1.4.3",
         "@types/node": "^14.0.22",
         "@types/yup": "^0.29.3",
+        "netlify-lambda": "^1.6.3",
         "node-dev": "^5.0.0"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonapi-serializer": "^3.6.6",
         "multer": "^1.4.2",
+        "serverless-http": "^2.5.0",
         "uuid": "^8.2.0",
         "yup": "^0.29.1"
     }
