--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "client:dev": "npm --prefix client run dev",
         "client:build": "npm --prefix client run build",
         "server:dev": "npm --prefix server run dev",
-        "server:build": "npm --prefix server run build"
+        "server:build": "npm --prefix server run build",
+        "server:serve": "npm --prefix server run serve",
+        "server:serve:stop": "npm --prefix server run serve:stop"
     }
 }
