--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
         "build": "netlify-lambda build src/www/netlify",
         "dev": "node-dev src/www/local/index.js",
         "serve": "forever start src/www/local/index.js",
-        "serve:stop": "forever stop src/www/local/index.js"
+        "serve:stop": "forever stop src/www/local/index.js",
+        "test": "jest --config jest.config.js",
+        "test:watch": "jest --config jest.config.js --watchAll"
     },
     "keywords": [],
     "author": "dstrekelj <domagojstrekelj@gmail.com>",
@@ -15,9 +17,12 @@
     "devDependencies": {
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.7",
+        "@types/jest": "^26.0.4",
         "@types/multer": "^1.4.3",
         "@types/node": "^14.0.22",
         "@types/yup": "^0.29.3",
+        "babel-jest": "^26.1.0",
+        "jest": "^26.1.0",
         "netlify-lambda": "^1.6.3",
         "node-dev": "^5.0.0"
     },
