--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,13 @@ jobs:
             - uses: actions/checkout@v2
             - name: Change directory
               run: cd server
+              run: pwd
+              run: ls -al
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm ci
+            - run: npm install
             - run: npm test
               env:
                   CI: true
