fix: ci working directory

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Server CI
 
 on: push
 
+defaults:
+    run:
+        working-directory: server
+
 jobs:
     test:
         runs-on: ubuntu-latest
@@ -10,15 +14,11 @@ jobs:
                 node-version: [12.x]
         steps:
             - uses: actions/checkout@v2
-            - name: Change directory
-              run: cd server
-            - run: pwd
-            - run: ls -al
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm install
+            - run: npm ci
             - run: npm test
               env:
                   CI: true
