feat: nodemailer support, client .env support
Squashed commit of the following:

commit 4698b4e37596c2577844f6b1bb257db5f1c33843
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:49:55 2020 +0200

    docs: update changelog

commit fe231d9b42379b43c145949ce524413ca0c89a29
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:48:31 2020 +0200

    feat: improve client .env support

commit 17e399e4a0e0a4762351fcade5a89d00bba07543
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:39:39 2020 +0200

    docs: update readme, changelog, .env.example

commit 3f6a402f837c2645a2359e0aca0799087c2b8739
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:29:35 2020 +0200

    docs: export firecamp project

commit 6b803e4190d71285b70b62e66c9cfc2caa47e29d
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:26:13 2020 +0200

    ci: run jobs when tags are pushed

commit 51eaaceaa9acd3625eab67cc9d46006cec2ae3ca
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Sun Jul 12 20:22:57 2020 +0200

    feat: support email transport via nodemailer

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,7 @@
 APP_SERVER_PORT=3000
+APP_SERVER_SMTP_HOST=
+APP_SERVER_SMTP_PORT=
+APP_SERVER_SMTP_USER=
+APP_SERVER_SMTP_PASS=
+APP_SERVER_EMAIL_SENDER=noreply@react-portfolio-example.com
+APP_SERVER_EMAIL_RECIPIENT=john.doe@example.com
