--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "@types/jest": "^26.0.4",
         "@types/multer": "^1.4.3",
         "@types/node": "^14.0.22",
+        "@types/nodemailer": "^6.4.0",
         "@types/yup": "^0.29.3",
         "babel-jest": "^26.1.0",
         "jest": "^26.1.0",
@@ -34,6 +35,7 @@
         "forever": "^3.0.0",
         "jsonapi-serializer": "^3.6.6",
         "multer": "^1.4.2",
+        "nodemailer": "^6.4.10",
         "serverless-http": "^2.5.0",
         "uuid": "^8.2.0",
         "yup": "^0.29.1"
